src/test/deca/context/invalid/added/mod.deca
// Doit lever une exception de vérification contextuelle

{
    float x;
    int y;
    x = 3.0;
    y = y % x;
}